# Decrypt9

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  build.sh  build_all.bat  clean_all.bat  ncchinfo_gen.py  sdinfo_gen.py  stub.ld  template.pnproj
brahma_loader/: Makefile
brahma_loader/source/: main.c
resources/: AppInfo  BrahmaAppInfo
scripts/: .gitignore  dump_ticket_keys.py  ncchinfo_gen.py  ncchinfo_tgen.py  print_ticket_keys.py
source/: CMakeLists.txt  common.h  delay.s  draw.c  draw.h  fs.c  fs.h  heap.c  heap.h  hid.c  hid.h  main.c  menu.c  menu.h  platform.c  platform.h  start.s
source/decryptor/: crypto.c  crypto.h  decryptor.c  decryptor.h  features.h  game.c  game.h  nand.c  nand.h  nandfat.c  nandfat.h  padgen.c  padgen.h  sha256.c  titlekey.c  titlekey.h
source/fatfs/: diskio.c  ff.c  ff.h  ffconf.h  sdmc.s  sdmmc.c  sdmmc.h
source/loader-bs/: bootstrap.ld  bs-start.s
tools/: insert.py
